change for custom

--- a/www/core/components/settings/lang/en.json
+++ b/www/core/components/settings/lang/en.json
@@ -5,11 +5,11 @@
     "cannotsyncoffline": "Cannot synchronise offline.",
     "cannotsyncwithoutwifi": "Cannot synchronise because the current settings only allow to synchronise when connected to Wi-Fi. Please connect to a Wi-Fi network.",
     "configuringnotifications": "You are configuring '{{$a}}' notifications.",
-    "cordovadevicemodel": "Cordova device model",
-    "cordovadeviceosversion": "Cordova device OS version",
-    "cordovadeviceplatform": "Cordova device platform",
-    "cordovadeviceuuid": "Cordova device UUID",
-    "cordovaversion": "Cordova version",
+    "cordovadevicemodel": "Indusved device model",
+    "cordovadeviceosversion": "Indusveddevice OS version",
+    "cordovadeviceplatform": "Indusveddevice platform",
+    "cordovadeviceuuid": "Indusveddevice UUID",
+    "cordovaversion": "Indusvedversion",
     "credits": "Credits",
     "currentlanguage": "Current language",
     "deletesitefiles": "Are you sure that you want to delete the downloaded files from the site '{{sitename}}'?",
